<resources>
    <string name="app_name">PracticaEvaluable_Alberto_Rodriguez</string>
    <string name="introduce_tu_nombre">Introduce tu nombre ...</string>
    <string name="introduce_tu_edad">Introduce tu edad ...</string>
    <string name="rosa">Rosa</string>
    <string name="azul">Azul</string>
    <string name="verde">Verde</string>
    <string name="introduce_tu_color_favorito">Introduce tu color favorito</string>
    <string name="enviar_informaci_n">Enviar información</string>
    <string name="puntuar">Puntuar</string>
</resources>