<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_tu_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tEdad"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:hint="@string/introduce_tu_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tNombre" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tEdad">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduce_tu_color_favorito" />

        <RadioButton
            android:id="@+id/rRosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rosa" />

        <RadioButton
            android:id="@+id/rAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azul" />

        <RadioButton
            android:id="@+id/rVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verde" />

    </RadioGroup>

    <Button
        android:id="@+id/bEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enviar_informaci_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>